Changed navigation tabs behaviour.

--- a/apps/fis-scraper-frontend/src/app/app.component.html
+++ b/apps/fis-scraper-frontend/src/app/app.component.html
@@ -32,9 +32,11 @@
           <a
             *ngFor="let link of navLinks"
             mat-tab-link
-            (click)="activeLink = link"
             [routerLink]="link.path"
-            [active]="activeLink === link"
+            [active]="
+              (activeLink$ | async) === link.path ||
+              isScraperPath(activeLink$ | async)
+            "
             routerLinkActive="active">
             {{ link.label }}
           </a>
