--- a/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.scss
+++ b/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.scss
@@ -40,8 +40,11 @@
 }
 
 .loader {
-  display: inline-block;
-  margin: 2rem auto;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
 }
 
 .table-container {
