--- a/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.html
@@ -3,42 +3,47 @@
     *ngIf="
       raceData.participantcountry_set && raceData.participantcountry_set.length
     "
-    class="table-container mat-elevation-z4">
-    <mat-table [dataSource]="raceData.participantcountry_set">
+    class="table-container__countries mat-elevation-z4">
+    <table
+      mat-table
+      class="countries-table"
+      [dataSource]="raceData.participantcountry_set">
       <ng-container
         *ngFor="let column of countriesColumns"
         [matColumnDef]="column">
-        <mat-header-cell *matHeaderCellDef>
+        <th mat-header-cell *matHeaderCellDef>
           {{ column.replace(prefixRegex, '') | capitalize }}
-        </mat-header-cell>
-        <mat-cell *matCellDef="let item">
+        </th>
+        <td mat-cell *matCellDef="let item">
           {{ getNestedValue(item, column) }}
-        </mat-cell>
+        </td>
       </ng-container>
 
-      <mat-header-row
-        *matHeaderRowDef="countriesColumns; sticky: true"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: countriesColumns"></mat-row>
-    </mat-table>
+      <tr mat-header-row *matHeaderRowDef="countriesColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: countriesColumns"></tr>
+    </table>
   </div>
   <div
     *ngIf="raceData.participant_set && raceData.participant_set.length"
-    class="table-container mat-elevation-z4">
-    <table mat-table [dataSource]="raceData.participant_set">
+    class="table-container__jumpers mat-elevation-z4">
+    <table
+      mat-table
+      class="jumpers-table"
+      [dataSource]="raceData.participant_set">
       <ng-container matColumnDef="jumper" sticky>
-        <th mat-header-cell *matHeaderCellDef colspan="6">Jumper</th>
+        <th *matHeaderCellDef mat-header-cell colspan="6">Jumper</th>
       </ng-container>
 
       <ng-container matColumnDef="jump1">
-        <th mat-header-cell *matHeaderCellDef colspan="15">Jump 1</th>
+        <th *matHeaderCellDef mat-header-cell colspan="15">Jump 1</th>
       </ng-container>
 
       <ng-container matColumnDef="jump2">
-        <th mat-header-cell *matHeaderCellDef colspan="15">Jump 2</th>
+        <th *matHeaderCellDef mat-header-cell colspan="15">Jump 2</th>
       </ng-container>
 
       <ng-container matColumnDef="summary" stickyEnd>
-        <th mat-header-cell *matHeaderCellDef colspan="4">Summary</th>
+        <th *matHeaderCellDef mat-header-cell colspan="4">Summary</th>
       </ng-container>
 
       <ng-container
@@ -46,7 +51,7 @@
         [matColumnDef]="column"
         [sticky]="indexOfElement < 6"
         [stickyEnd]="indexOfElement > jumpersColumns.length - 4">
-        <th mat-header-cell *matHeaderCellDef>
+        <th *matHeaderCellDef mat-header-cell>
           {{ column.replace(prefixRegex, '') | capitalize }}
         </th>
         <td mat-cell *matCellDef="let item">
@@ -74,7 +79,5 @@
 </ng-container>
 
 <ng-template #loader>
-  <div class="loader">
-    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-  </div>
+  <app-loading-spinner></app-loading-spinner>
 </ng-template>
