--- a/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
@@ -4,11 +4,8 @@
   </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
-    <ng-container *ngIf="spinnerState$ | async">
-      <div class="loader">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-      </div>
-    </ng-container>
+    <app-loading-spinner
+      [isLoading]="spinnerState$ | async"></app-loading-spinner>
     <ng-container *ngIf="folders$ | async as folders">
       <mat-accordion class="accordion" multi>
         <mat-expansion-panel *ngFor="let folder of folders">
