--- a/apps/fis-scraper-frontend/src/app/scraper/range-races/range-races.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/range-races/range-races.component.html
@@ -3,26 +3,26 @@
   <mat-form-field appearance="outline">
     <mat-label>Initial FIS ID</mat-label>
     <input matInput type="number" formControlName="start_fis_id" />
-    <mat-error *ngIf="startFisId.hasError('min')">
+    <mat-error *ngIf="startFisId | hasError: 'min'">
       Enter <strong>number</strong> greater than 0
     </mat-error>
-    <mat-error *ngIf="startFisId.hasError('pattern')">
+    <mat-error *ngIf="startFisId | hasError: 'pattern'">
       Enter <strong>number</strong>
     </mat-error>
-    <mat-error *ngIf="startFisId.hasError('required')">
+    <mat-error *ngIf="startFisId | hasError: 'required'">
       Initial FIS ID is <strong>required</strong>
     </mat-error>
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Final FIS ID</mat-label>
     <input matInput type="number" formControlName="end_fis_id" />
-    <mat-error *ngIf="endFisId.hasError('min')">
+    <mat-error *ngIf="endFisId | hasError: 'min'">
       Enter <strong>number</strong> greater than 0
     </mat-error>
-    <mat-error *ngIf="endFisId.hasError('pattern')">
+    <mat-error *ngIf="endFisId | hasError: 'pattern'">
       Enter <strong>number</strong>
     </mat-error>
-    <mat-error *ngIf="endFisId.hasError('required')">
+    <mat-error *ngIf="endFisId | hasError: 'required'">
       Final FIS ID is <strong>required</strong>
     </mat-error>
   </mat-form-field>
