--- a/apps/fis-scraper-frontend/src/app/app.component.html
+++ b/apps/fis-scraper-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="container" (backdropClick)="close()">
   <mat-sidenav #sidenav (keydown.escape)="close()" disableClose>
     <h2 class="app-menu-title">Menu:</h2>
-    <p *ngFor="let link of navLinks">
+    <p *ngFor="let link of navLinks; trackBy: trackByLink">
       <button
         mat-raised-button
         color="primary"
@@ -33,12 +33,12 @@
           color="primary"
           backgroundColor="primary">
           <a
-            *ngFor="let link of navLinks"
+            *ngFor="let link of navLinks; trackBy: trackByLink"
             mat-tab-link
             [routerLink]="link.path"
             [active]="
               (activeLink$ | async) === link.path ||
-              isScraperPath(activeLink$ | async)
+              (activeLink$ | async | isRouterPath)
             "
             routerLinkActive="active">
             {{ link.label }}
