--- a/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
@@ -8,7 +8,8 @@
       [isLoading]="spinnerState$ | async"></app-loading-spinner>
     <ng-container *ngIf="folders$ | async as folders">
       <mat-accordion class="accordion" multi>
-        <mat-expansion-panel *ngFor="let folder of folders">
+        <mat-expansion-panel
+          *ngFor="let folder of folders; trackBy: trackByIndex">
           <mat-expansion-panel-header>
             <mat-panel-title>
               <mat-icon svgIcon="folder_icon"></mat-icon>
@@ -28,60 +29,18 @@
           </mat-expansion-panel-header>
           <table mat-table [dataSource]="folder.entries" multiTemplateDataRows>
             <ng-container
-              *ngFor="let column of displayedColumns"
+              *ngFor="let column of displayedColumns; trackBy: trackByIndex"
               [matColumnDef]="column">
               <th mat-header-cell *matHeaderCellDef>
                 {{ (column !== 'expand' ? column : '') | capitalize }}
               </th>
               <td mat-cell *matCellDef="let element">
-                <ng-container *ngIf="column === 'tournament'">
-                  {{ element.tournament.name }}
-                </ng-container>
-                <ng-container *ngIf="column === 'date'">
-                  {{ element.date | date }}
-                </ng-container>
-                <ng-container *ngIf="column === 'details'">
-                  <mat-icon [color]="element.details ? 'accent' : 'warn'">
-                    {{ element.details ? 'check_circle' : 'cancel' }}
-                  </mat-icon>
-                </ng-container>
-                <ng-container *ngIf="column === 'kind'">
-                  <mat-icon
-                    [svgIcon]="element.kind"
-                    [matTooltip]="element.kind | capitalize"></mat-icon>
-                </ng-container>
-                <ng-container
-                  *ngIf="
-                    column === 'fis_id' ||
-                    column === 'place' ||
-                    column === 'hill_size'
-                  ">
-                  {{ element[column] }}
-                </ng-container>
-                <ng-container *ngIf="column === 'download'">
-                  <button
-                    mat-icon-button
-                    (click)="$event.stopPropagation(); downloadRace(element)">
-                    <mat-icon>download</mat-icon>
-                  </button>
-                </ng-container>
-                <ng-container *ngIf="column === 'expand'">
-                  <button
-                    mat-icon-button
-                    aria-label="expand row"
-                    (click)="
-                      expandedElement =
-                        expandedElement === element ? null : element;
-                      $event.stopPropagation()
-                    ">
-                    <mat-icon *ngIf="expandedElement !== element"
-                      >keyboard_arrow_down</mat-icon
-                    >
-                    <mat-icon *ngIf="expandedElement === element"
-                      >keyboard_arrow_up</mat-icon
-                    >
-                  </button>
-                </ng-container>
+                <app-folder-table-cell
+                  [item]="element"
+                  [key]="column"
+                  [expanded]="element === expandedElement"
+                  (downloadRaceEvent)="downloadRace($event)"
+                  (expandEvent)="expandRace($event)"></app-folder-table-cell>
               </td>
             </ng-container>
             <ng-container matColumnDef="expandedDetail">
