--- a/apps/fis-scraper-frontend/src/app/scraper/multi-races/multi-races.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/multi-races/multi-races.component.html
@@ -3,8 +3,14 @@
     <h2>Scrap multiple races</h2>
     <div
       class="multi-races-form-group"
-      *ngFor="let race of races.controls; let i = index; trackBy: trackByIndex"
-      [formGroupName]="i">
+      *ngFor="
+        let race of races.controls;
+        let i = index;
+        let first = first;
+        trackBy: trackByIndex
+      "
+      [formGroupName]="i"
+      [@changeInputsNumber]="!first">
       <mat-form-field appearance="outline">
         <mat-label>FIS ID</mat-label>
         <input matInput type="number" formControlName="fis_id" />
