--- a/apps/fis-scraper-frontend/src/app/scraper/multi-races/multi-races.component.scss
+++ b/apps/fis-scraper-frontend/src/app/scraper/multi-races/multi-races.component.scss
@@ -1,6 +1,12 @@
+:host {
+  width: 20rem;
+  height: 100%;
+}
+
 .multi-races-form {
-  width: min(40rem, 100%);
-  padding: 3rem;
+  width: 20rem;
+  height: 100%;
+  padding: 3rem 1rem;
   display: flex;
   flex-direction: column;
 
