--- a/apps/fis-scraper-frontend/src/app/app.component.html
+++ b/apps/fis-scraper-frontend/src/app/app.component.html
@@ -1,55 +1,26 @@
-<mat-sidenav-container class="container" (backdropClick)="close()">
-  <mat-sidenav #sidenav (keydown.escape)="close()" disableClose>
-    <h2 class="app-menu-title">Menu:</h2>
-    <p *ngFor="let link of navLinks; trackBy: trackByLink">
-      <button
-        mat-raised-button
-        color="primary"
-        (click)="close()"
-        [routerLink]="link.path"
-        routerLinkActive="active">
-        {{ link.label }}
-      </button>
-    </p>
+<mat-toolbar class="title mat-elevation-z8" color="primary">
+  <div class="title-content">
+    <div class="titles">
+      <h1 class="app-title">{{ title }}</h1>
+      <h2 class="app-subtitle">{{ subtitle }}</h2>
+    </div>
+  </div>
+</mat-toolbar>
+<mat-sidenav-container class="container">
+  <mat-sidenav
+    #sidenav
+    [@collapseExpand]="menuCollapsed"
+    mode="side"
+    opened
+    disableClose
+    fixedInViewport="true"
+    [fixedTopGap]="64">
+    <app-navigation></app-navigation>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar class="title mat-elevation-z8" color="primary">
-      <div class="title-content">
-        <button mat-icon-button (click)="sidenav.open()" matTooltip="Open menu">
-          <mat-icon>menu</mat-icon>
-        </button>
-        <div class="titles">
-          <h1 class="app-title">{{ title }}</h1>
-          <h2 class="app-subtitle">{{ subtitle }}</h2>
-        </div>
-      </div>
-    </mat-toolbar>
-    <mat-toolbar color="primary">
-      <div class="menu-content">
-        <nav
-          mat-tab-nav-bar
-          class="menu-content"
-          [tabPanel]="mainNavPanel"
-          color="primary"
-          backgroundColor="primary">
-          <a
-            *ngFor="let link of navLinks; trackBy: trackByLink"
-            mat-tab-link
-            [routerLink]="link.path"
-            [active]="
-              (activeLink$ | async) === link.path ||
-              (activeLink$ | async | isRouterPath)
-            "
-            routerLinkActive="active">
-            {{ link.label }}
-          </a>
-        </nav>
-        <mat-tab-nav-panel
-          class="menu-content"
-          #mainNavPanel></mat-tab-nav-panel>
-      </div>
-    </mat-toolbar>
-    <router-outlet></router-outlet>
+  <mat-sidenav-content
+    class="app-content"
+    [style.margin-left]="menuCollapsed ? '4rem' : '15rem'">
+    <app-siderail></app-siderail>
     <app-notifications></app-notifications>
   </mat-sidenav-content>
 </mat-sidenav-container>
