--- a/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
@@ -1,81 +1,70 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title> Archive directories: </mat-card-title>
-  </mat-card-header>
-  <mat-divider></mat-divider>
-  <mat-card-content>
-    <app-loading-spinner
-      [isLoading]="spinnerState$ | async"></app-loading-spinner>
-    <ng-container *ngIf="folders$ | async as folders">
-      <mat-accordion class="accordion" multi>
-        <mat-expansion-panel
-          *ngFor="let folder of folders; trackBy: trackByIndex">
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              <mat-icon svgIcon="folder_icon"></mat-icon>
-              <span>
-                {{ folder.name }}
-              </span>
-            </mat-panel-title>
-            <mat-panel-description>
-              <button
-                mat-icon-button
-                (click)="
-                  $event.stopPropagation(); downloadFolder(folder.entries)
-                ">
-                <mat-icon> download </mat-icon>
-              </button>
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <table mat-table [dataSource]="folder.entries" multiTemplateDataRows>
-            <ng-container
-              *ngFor="let column of displayedColumns; trackBy: trackByIndex"
-              [matColumnDef]="column">
-              <th mat-header-cell *matHeaderCellDef>
-                {{ (column !== 'expand' ? column : '') | capitalize }}
-              </th>
-              <td mat-cell *matCellDef="let element">
-                <app-folder-table-cell
-                  [item]="element"
-                  [key]="column"
-                  [expanded]="element === expandedElement"
-                  (downloadRaceEvent)="downloadRace($event)"
-                  (expandEvent)="expandRace($event)"></app-folder-table-cell>
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="expandedDetail">
-              <td
-                mat-cell
-                *matCellDef="let element"
-                [attr.colspan]="displayedColumns.length">
-                <div
-                  class="detail-content"
-                  [@detailExpand]="
-                    element === expandedElement ? 'expanded' : 'collapsed'
-                  ">
-                  <app-archive-race-details
-                    *ngIf="element === expandedElement"
-                    [uuid]="element.uuid"></app-archive-race-details>
-                </div>
-              </td>
-            </ng-container>
+<h2>Archive directories:</h2>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr
-              mat-row
-              *matRowDef="let row; columns: displayedColumns"
-              class="element-row"
-              [class.expanded-row]="expandedElement === row"
-              (click)="
-                expandedElement = expandedElement === row ? null : row
-              "></tr>
-            <tr
-              mat-row
-              *matRowDef="let row; columns: ['expandedDetail']"
-              class="detail-row"></tr>
-          </table>
-        </mat-expansion-panel>
-      </mat-accordion>
-    </ng-container>
-  </mat-card-content>
-</mat-card>
+<mat-divider></mat-divider>
+<app-loading-spinner [isLoading]="spinnerState$ | async"></app-loading-spinner>
+<ng-container *ngIf="folders$ | async as folders">
+  <mat-accordion class="accordion" multi>
+    <mat-expansion-panel *ngFor="let folder of folders; trackBy: trackByIndex">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon svgIcon="folder_icon"></mat-icon>
+          <span>
+            {{ folder.name }}
+          </span>
+        </mat-panel-title>
+        <mat-panel-description>
+          <button
+            mat-icon-button
+            (click)="$event.stopPropagation(); downloadFolder(folder.entries)">
+            <mat-icon> download </mat-icon>
+          </button>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <table mat-table [dataSource]="folder.entries" multiTemplateDataRows>
+        <ng-container
+          *ngFor="let column of displayedColumns; trackBy: trackByIndex"
+          [matColumnDef]="column">
+          <th mat-header-cell *matHeaderCellDef>
+            {{ (column !== 'expand' ? column : '') | capitalize }}
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <app-folder-table-cell
+              [item]="element"
+              [key]="column"
+              [expanded]="element === expandedElement"
+              (downloadRaceEvent)="downloadRace($event)"
+              (expandEvent)="expandRace($event)"></app-folder-table-cell>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="expandedDetail">
+          <td
+            mat-cell
+            *matCellDef="let element"
+            [attr.colspan]="displayedColumns.length">
+            <div
+              class="detail-content"
+              [@detailExpand]="
+                element === expandedElement ? 'expanded' : 'collapsed'
+              ">
+              <app-archive-race-details
+                *ngIf="element === expandedElement"
+                [uuid]="element.uuid"></app-archive-race-details>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          class="element-row"
+          [class.expanded-row]="expandedElement === row"
+          (click)="expandedElement = expandedElement === row ? null : row"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: ['expandedDetail']"
+          class="detail-row"></tr>
+      </table>
+    </mat-expansion-panel>
+  </mat-accordion>
+</ng-container>
