--- a/apps/fis-scraper-frontend/src/app/scraper/range-races/range-races.component.scss
+++ b/apps/fis-scraper-frontend/src/app/scraper/range-races/range-races.component.scss
@@ -1,6 +1,7 @@
 .range-races-form {
-  width: min(40rem, 100%);
-  padding: 3rem;
+  width: 20rem;
+  height: 100%;
+  padding: 3rem 1rem;
   display: flex;
   gap: 0.5rem;
   flex-direction: column;
