--- a/apps/fis-scraper-frontend/src/app/scraper/scraper/scraper.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/scraper/scraper.component.html
@@ -1,30 +1,8 @@
-<mat-card>
-  <mat-tab-group color="primary" backgroundColor="primary">
-    <mat-tab [label]="scraperTabs.SINGLE_RACE | capitalize">
-      <ng-template matTabContent>
-        <app-single-race></app-single-race>
-      </ng-template>
-    </mat-tab>
-    <mat-tab [label]="scraperTabs.MULTIPLE_RACES | capitalize">
-      <ng-template matTabContent>
-        <app-multi-races></app-multi-races>
-      </ng-template>
-    </mat-tab>
-    <mat-tab [label]="scraperTabs.RANGE_OF_RACES | capitalize">
-      <ng-template matTabContent>
-        <app-range-races></app-range-races>
-      </ng-template>
-    </mat-tab>
-    <mat-tab [label]="scraperTabs.RAW_DATA | capitalize">
-      <ng-template matTabContent>
-        <app-unprocessed-data></app-unprocessed-data>
-      </ng-template>
-    </mat-tab>
-    <mat-tab [label]="scraperTabs.SCRAP_TABLE | capitalize">
-      <ng-template matTabContent>
-        <app-scrap-table></app-scrap-table>
-      </ng-template>
-    </mat-tab>
-  </mat-tab-group>
-</mat-card>
-<app-current-files></app-current-files>
+<mat-drawer-container hasBackdrop="false">
+  <mat-drawer mode="side" position="end">
+    <app-single-race></app-single-race>
+  </mat-drawer>
+  <mat-drawer-content>
+    <app-current-files></app-current-files>
+  </mat-drawer-content>
+</mat-drawer-container>
