--- a/apps/fis-scraper-frontend/src/app/scraper/scraper/scraper.component.scss
+++ b/apps/fis-scraper-frontend/src/app/scraper/scraper/scraper.component.scss
@@ -1,5 +1,11 @@
-mat-card {
-  margin: 0 auto;
+:host {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100%;
   width: 100%;
-  max-width: 70rem;
+}
+
+mat-drawer-container {
+  width: 100%;
+  height: 100%;
 }
