--- a/apps/fis-scraper-frontend/src/app/app.component.html
+++ b/apps/fis-scraper-frontend/src/app/app.component.html
@@ -6,10 +6,12 @@
     </div>
   </div>
 </mat-toolbar>
-<mat-sidenav-container class="container">
+<mat-sidenav-container
+  class="container"
+  *ngIf="menuDisplayState$ | async as menuDisplayState">
   <mat-sidenav
     #sidenav
-    [@collapseExpand]="menuCollapsed"
+    [@collapseExpand]="menuDisplayState"
     mode="side"
     opened
     disableClose
@@ -17,9 +19,7 @@
     [fixedTopGap]="64">
     <app-navigation></app-navigation>
   </mat-sidenav>
-  <mat-sidenav-content
-    class="app-content"
-    [style.margin-left]="menuCollapsed ? '4rem' : '15rem'">
+  <mat-sidenav-content [@widenShorten]="menuDisplayState" class="app-content">
     <app-siderail></app-siderail>
     <app-notifications></app-notifications>
   </mat-sidenav-content>
