Store files moved to feature folders

--- a/apps/fis-scraper-frontend/src/app/app.component.html
+++ b/apps/fis-scraper-frontend/src/app/app.component.html
@@ -20,7 +20,7 @@
     <app-navigation></app-navigation>
   </mat-sidenav>
   <mat-sidenav-content [@widenShorten]="menuDisplayState" class="app-content">
-    <app-siderail></app-siderail>
+    <app-side-rail></app-side-rail>
     <app-notifications></app-notifications>
   </mat-sidenav-content>
 </mat-sidenav-container>
